Button html added

--- a/warningPage.html
+++ b/warningPage.html
@@ -8,5 +8,8 @@
 <br />
 <h1>WARNING</h1>
 <p class="warn">The site you are trying to enter uses prison labor to manufacture their goods. Are you sure you want to continue?</p>
+<div>
+	<button class="but" onclick="enterFunc()">Yes</button>
+</div>
 </body>
 </html>
