--- a/warningPage.html
+++ b/warningPage.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
+	<script src="jquery.min.js"></script>
 </head>
 <body>
 <br />
 <br />
 <h1>WARNING</h1>
 <p class="warn">The site you are trying to enter uses prison labor to manufacture their goods. Are you sure you want to continue?</p>
-<div>
-	<button class="but" onclick="enterFunc()">Yes</button>
-</div>
+
+<button id="enterButton">Yes</button>
+<script src="background.js"></script>
 </body>
 </html>
